# telegram-conversation-exporter

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: tce-telegram-bot.service
docs/: architecture-plan.md  canonical-conversation-export.schema.json  v1-mvp-spec.md
telegram_conversation_exporter/: __init__.py  anonymization.py  backends.py  cli.py  config.py  exporters.py  media.py  models.py  pipeline.py  range_selection.py  schema.py  telegram_bot.py  telegram_export_parser.py
tests/: test_anonymization.py  test_cli.py  test_parser.py  test_pipeline.py  test_range_selection.py  test_schema_validation.py  test_telegram_bot.py  test_transcription_backend.py  test_vision_ocr_backends.py
tests/fixtures/: full_export.json  media_chat.json  replies_private_chat.json  simple_private_chat.json
